0.0.1-1.20.4:
 - Clean project