@@ -1,0 +1,3 @@
+{
+  "block.neovillagerswizard.unenchanting": "Unenchanting Table"
+}
