@@ -1,0 +1,137 @@
+{
+	"credit": "Made with Blockbench",
+	"textures": {
+		"particle": "neovillagerswizard:block/unenchanting_down",
+		"down": "neovillagerswizard:block/unenchanting_down",
+		"side": "neovillagerswizard:block/unenchanting_side",
+		"top": "neovillagerswizard:block/unenchanting_top",
+		"up": "neovillagerswizard:block/unenchanting_up"
+	},
+	"elements": [
+		{
+			"name": "base",
+			"from": [0, 0, 0],
+			"to": [16, 12, 16],
+			"shade": false,
+			"faces": {
+				"north": {"uv": [0, 0, 16, 12], "texture": "#side"},
+				"east": {"uv": [0, 0, 16, 12], "texture": "#side"},
+				"south": {"uv": [0, 0, 16, 12], "texture": "#side"},
+				"west": {"uv": [0, 0, 16, 12], "texture": "#side"},
+				"up": {"uv": [0, 0, 16, 16], "texture": "#top"},
+				"down": {"uv": [0, 0, 16, 16], "texture": "#down"}
+			}
+		},
+		{
+			"from": [6, 12, 4],
+			"to": [10, 16, 12],
+			"shade": false,
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 14, 8]},
+			"faces": {
+				"north": {"uv": [8, 0, 16, 8], "texture": "#up"},
+				"east": {"uv": [0, 0, 8, 12], "texture": "#up"},
+				"south": {"uv": [8, 0, 16, 8], "texture": "#up"},
+				"west": {"uv": [0, 0, 8, 12], "texture": "#up"},
+				"up": {"uv": [0, 0, 8, 12], "texture": "#up"},
+				"down": {"uv": [0, 0, 8, 12], "texture": "#up"}
+			}
+		},
+		{
+			"from": [4, 13, 4],
+			"to": [5, 14, 8],
+			"shade": false,
+			"faces": {
+				"north": {"uv": [6, 12, 10, 16], "texture": "#up"},
+				"east": {"uv": [0, 12, 6, 16], "texture": "#up"},
+				"south": {"uv": [6, 12, 10, 16], "texture": "#up"},
+				"west": {"uv": [0, 12, 6, 16], "texture": "#up"},
+				"up": {"uv": [0, 16, 6, 12], "texture": "#up"},
+				"down": {"uv": [0, 12, 6, 16], "texture": "#up"}
+			}
+		},
+		{
+			"from": [4, 13, 8],
+			"to": [6, 15, 11],
+			"shade": false,
+			"faces": {
+				"north": {"uv": [12, 12, 16, 16], "texture": "#up"},
+				"east": {"uv": [10, 8, 16, 12], "texture": "#up"},
+				"south": {"uv": [12, 12, 16, 16], "texture": "#up"},
+				"west": {"uv": [10, 8, 16, 12], "texture": "#up"},
+				"up": {"uv": [10, 12, 16, 8], "texture": "#up"},
+				"down": {"uv": [10, 8, 16, 12], "texture": "#up"}
+			}
+		},
+		{
+			"from": [11, 13, 4],
+			"to": [12, 14, 8],
+			"shade": false,
+			"faces": {
+				"north": {"uv": [6, 12, 10, 16], "texture": "#up"},
+				"east": {"uv": [0, 12, 6, 16], "texture": "#up"},
+				"south": {"uv": [6, 12, 10, 16], "texture": "#up"},
+				"west": {"uv": [0, 12, 6, 16], "texture": "#up"},
+				"up": {"uv": [0, 16, 6, 12], "texture": "#up"},
+				"down": {"uv": [0, 12, 6, 16], "texture": "#up"}
+			}
+		},
+		{
+			"from": [10, 13, 8],
+			"to": [12, 15, 11],
+			"shade": false,
+			"faces": {
+				"north": {"uv": [12, 12, 16, 16], "texture": "#up"},
+				"east": {"uv": [10, 8, 16, 12], "texture": "#up"},
+				"south": {"uv": [12, 12, 16, 16], "texture": "#up"},
+				"west": {"uv": [10, 8, 16, 12], "texture": "#up"},
+				"up": {"uv": [10, 12, 16, 8], "texture": "#up"},
+				"down": {"uv": [10, 8, 16, 12], "texture": "#up"}
+			}
+		}
+	],
+	"display": {
+		"thirdperson_righthand": {
+			"rotation": [75, 45, 0],
+			"translation": [0, 2.5, 0],
+			"scale": [0.375, 0.375, 0.375]
+		},
+		"thirdperson_lefthand": {
+			"rotation": [75, 45, 0],
+			"translation": [0, 2.5, 0],
+			"scale": [0.375, 0.375, 0.375]
+		},
+		"firstperson_righthand": {
+			"rotation": [0, 45, 0],
+			"scale": [0.4, 0.4, 0.4]
+		},
+		"firstperson_lefthand": {
+			"rotation": [0, 225, 0],
+			"scale": [0.4, 0.4, 0.4]
+		},
+		"ground": {
+			"translation": [0, 3, 0],
+			"scale": [0.25, 0.25, 0.25]
+		},
+		"gui": {
+			"rotation": [30, 225, 0],
+			"scale": [0.625, 0.625, 0.625]
+		},
+		"head": {
+			"translation": [0, 3.75, 0],
+			"scale": [1.02, 1, 1]
+		},
+		"fixed": {
+			"scale": [0.5, 0.5, 0.5]
+		}
+	},
+	"groups": [
+		0,
+		{
+			"name": "up",
+			"origin": [8, 8, 8],
+			"color": 0,
+			"shade": false,
+			"children": [1, 2, 3, 4, 5]
+		}
+	]
+}
