@@ -1,0 +1,3 @@
+{
+	"parent": "neovillagerswizard:block/unenchanting"
+}
