@@ -1,0 +1,35 @@
+{
+  "parent": "minecraft:recipes/root",
+  "criteria": {
+    "has_grindstone": {
+      "trigger": "minecraft:recipe_crafted",
+      "conditions": {
+        "recipe_id": "minecraft:grindstone"
+      }
+    },
+    "has_enchanting_table": {
+      "trigger": "minecraft:recipe_crafted",
+      "conditions": {
+        "recipe_id": "minecraft:enchanting_table"
+      }
+    },
+    "has_the_recipe": {
+      "conditions": {
+        "recipe": "neovillagerswizard:unenchanting"
+      },
+      "trigger": "minecraft:recipe_unlocked"
+    }
+  },
+  "requirements": [
+    [
+      "has_the_recipe",
+      "has_grindstone",
+      "has_enchanting_table"
+    ]
+  ],
+  "rewards": {
+    "recipes": [
+      "neovillagerswizard:unenchanting"
+    ]
+  }
+}
