@@ -1,2 +1,3 @@
 0.0.1-1.20.4:
  - Clean project
+ - New block: The unenchanting table
